Pixel alignment fixes

--- a/Files/src/css/component/collection.component.scss
+++ b/Files/src/css/component/collection.component.scss
@@ -63,12 +63,10 @@
 }
 
 .ads {
-    position: absolute;
     background: red;
     width: 400px;
     height: 300px;
-    bottom: 0;
-    right: 0;
+    margin-top: 15px;
 }
 
 card-search {
