--- a/Files/src/css/component/collection/card-history.component.scss
+++ b/Files/src/css/component/collection/card-history.component.scss
@@ -2,12 +2,12 @@
 @import '../../global/fonts';
 
 .card-history {
-	margin-top: 42px;
+	margin-top: 29px;
 	width: 400px;
 }
 
 .top-container {
-	margin-bottom: 11px;
+	margin-bottom: 6px;
 	display: flex;
     justify-content: space-between;
     align-items: center;
