--- a/Files/src/css/component/collection/sets.component.scss
+++ b/Files/src/css/component/collection/sets.component.scss
@@ -1,4 +1,4 @@
 .sets {
-	margin-top: 35px;
+	margin-top: 26px;
 	overflow: auto;
 }
