--- a/Files/src/css/component/main-window.component.scss
+++ b/Files/src/css/component/main-window.component.scss
@@ -63,7 +63,7 @@ body {
 	    display: flex;
 	    flex-direction: column;
     	overflow: hidden;
-    	border: 1px solid #785f6b;
+    	outline: 1px solid #785f6b;
 
 	    .menu-bar {
 	    	background: transparent;
